# pen-power-recall-website-2025

./: .env.example  .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  pytest.ini  requirements.txt  test_credentials.py  test_html_generation.py
.github/workflows/: deploy.yml
src/: __init__.py  main.py
src/application/: __init__.py  html_generator.py  sheet_service.py
src/domain/: __init__.py  models.py
src/infrastructure/: __init__.py
src/presentation/: __init__.py
src/presentation/static/css/: style.css
src/presentation/templates/: index.html
tests/: __init__.py  test_html_generator.py  test_models.py  test_sheet_service.py
